[tool.poetry]
name = "db-batch"
version = "0.1.0"
description = ""
authors = ["voightp <vojtechpanek@seznam.cz>"]

[tool.poetry.dependencies]
python = ">=3.10, <=3.13"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pre-commit = "^4.0.1"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
